home/api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home
  annotations:
    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/auth-url: "https://$host/authz/authz"
     nginx.ingress.kubernetes.io/auth-signin: "https://$host/authz/login?originalRequestUri=$escaped_request_uri"
     nginx.ingress.kubernetes.io/auth-response-headers: x-auth-request-email, x-auth-request-user
spec:
  rules:
    - http:
        paths:
        - path: /home
          backend:
            serviceName: home
            servicePort: 5000
---
